# pii-vault

./: .gitignore  Cargo.toml  README.md  llms.txt
benchmark/: README.md  compare.py  dataset.json  run_pii_vault.ts  run_presidio.py
docs/: index.html  recognizers.json
docs/pkg/: package.json  pii_vault_wasm.d.ts  pii_vault_wasm.js  pii_vault_wasm_bg.wasm  pii_vault_wasm_bg.wasm.d.ts
go/: go.mod
go/piivault/: piivault.go
python/: README.md  pyproject.toml
python/pii_vault/: __init__.py
rust/: Cargo.toml
rust/src/: analyzer.rs  anonymizer.rs  entity.rs  integration_tests.rs  lib.rs  recognizer.rs  vault.rs
spec/: entities.json
spec/recognizers/: au_abn.json  au_acn.json  au_medicare.json  au_tfn.json  br_cpf.json  ca_sin.json  cn_bank_card.json  cn_id_card.json  cn_passport.json  cn_phone.json  credit_card.json  crypto.json  de_handelsregister.json  de_id_card.json  de_passport.json  de_steuer_id.json  de_tax_id.json  de_vat_id.json  email.json  es_nie.json  es_nif.json  fi_personal_id.json  fr_nir.json  iban.json  in_aadhaar.json  in_pan.json  in_passport.json  ip_address.json  it_fiscal_code.json  jp_my_number.json  jp_passport.json  kr_rrn.json  mac_address.json  phone.json  pl_pesel.json  se_personal_number.json  sg_nric.json  uk_driving_licence.json  uk_nhs.json  uk_nino.json  (+7 more)
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: analyzer.ts  anonymizer.ts  entity.ts  index.ts  recognizer.ts  vault.ts
typescript/src/__tests__/: analyzer.test.ts  anonymizer.test.ts  integration.test.ts  recognizer.test.ts  vault.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
