[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-vault"
version = "0.1.0"
description = "Presidio-compatible PII detection, anonymization, and reversible tokenization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Jiansen He", email = "jiansenhe@gmail.com"}]
keywords = ["pii", "privacy", "anonymization", "redaction", "presidio", "gdpr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/Jiansen/pii-vault"
Repository = "https://github.com/Jiansen/pii-vault"
Issues = "https://github.com/Jiansen/pii-vault/issues"
