[package]
name = "pii-vault"
version = "0.2.0"
edition = "2021"
description = "Presidio-compatible PII detection, anonymization, and reversible tokenization"
license = "MIT"
repository = "https://github.com/Jiansen/pii-vault"
homepage = "https://github.com/Jiansen/pii-vault"
readme = "../README.md"
keywords = ["pii", "privacy", "anonymization", "redaction", "presidio"]
categories = ["text-processing"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
