[package]
name = "pii-vault-wasm"
version = "0.1.0"
edition = "2021"
description = "PII Vault WASM bindings — Presidio-compatible PII detection in the browser"
license = "MIT"
repository = "https://github.com/Jiansen/pii-vault"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pii-vault = { path = "../rust" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
